tests/dataset/tpc-h/compiler/cpp/q9.error
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:86:12: error: ‘n’ was not declared in this scope
   86 |   decltype(n.n_name) nation;
      |            ^
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:86:12: error: ‘n’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:87:34: error: ‘o’ was not declared in this scope
   87 |   decltype(std::stoi(std::string(o.o_orderdate).substr(0, (4) - (0)))) o_year;
      |                                  ^
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:87:34: error: ‘o’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:90:12: error: ‘l’ was not declared in this scope
   90 |   decltype(l) l;
      |            ^
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:90:12: error: ‘l’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:91:12: error: ‘p’ was not declared in this scope
   91 |   decltype(p) p;
      |            ^
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:91:12: error: ‘p’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:92:12: error: ‘s’ was not declared in this scope
   92 |   decltype(s) s;
      |            ^
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:92:12: error: ‘s’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:93:12: error: ‘ps’ was not declared in this scope; did you mean ‘s’?
   93 |   decltype(ps) ps;
      |            ^~
      |            s
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:93:12: error: ‘ps’ was not declared in this scope; did you mean ‘s’?
   93 |   decltype(ps) ps;
      |            ^~
      |            s
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:94:12: error: ‘o’ was not declared in this scope
   94 |   decltype(o) o;
      |            ^
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:94:12: error: ‘o’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:95:12: error: ‘n’ was not declared in this scope
   95 |   decltype(n) n;
      |            ^
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:95:12: error: ‘n’ was not declared in this scope
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:350:23: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘int’ in initialization
  350 |                     n.n_name,
      |                     ~~^~~~~~
      |                       |
      |                       std::string {aka std::__cxx11::basic_string<char>}
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:355:51: error: cannot convert ‘Lineitem’ to ‘int’ in initialization
  355 |                     __g.items.push_back(__struct8{l, p, s, ps, o, n});
      |                                                   ^
      |                                                   |
      |                                                   Lineitem
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:363:56: error: cannot convert ‘Lineitem’ to ‘int’ in initialization
  363 |                       std::vector<__struct8>{__struct8{l, p, s, ps, o, n}}});
      |                                                        ^
      |                                                        |
      |                                                        Lineitem
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:363:74: error: no matching function for call to ‘std::vector<__struct8>::vector(<brace-enclosed initializer list>)’
  363 |                       std::vector<__struct8>{__struct8{l, p, s, ps, o, n}}});
      |                                                                          ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:9:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = __struct8; _Alloc = std::allocator<__struct8>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; allocator_type = std::allocator<__struct8>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; std::__type_identity_t<_Alloc> = std::allocator<__struct8>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; allocator_type = std::allocator<__struct8>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; allocator_type = std::allocator<__struct8>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; std::__type_identity_t<_Alloc> = std::allocator<__struct8>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; size_type = long unsigned int; value_type = std::vector<__struct8>::value_type; allocator_type = std::allocator<__struct8>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; size_type = long unsigned int; allocator_type = std::allocator<__struct8>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; allocator_type = std::allocator<__struct8>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = __struct8; _Alloc = std::allocator<__struct8>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:379:59: error: request for member ‘l_extendedprice’ in ‘std::declval<__struct8>().__struct8::l’, which is of non-class type ‘int’
  379 |                             ((std::declval<__struct8>().l.l_extendedprice *
      |                                                           ^~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:380:65: error: request for member ‘l_discount’ in ‘std::declval<__struct8>().__struct8::l’, which is of non-class type ‘int’
  380 |                               ((1 - std::declval<__struct8>().l.l_discount)))) -
      |                                                                 ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:381:60: error: request for member ‘ps_supplycost’ in ‘std::declval<__struct8>().__struct8::ps’, which is of non-class type ‘int’
  381 |                             ((std::declval<__struct8>().ps.ps_supplycost *
      |                                                            ^~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:382:59: error: request for member ‘l_quantity’ in ‘std::declval<__struct8>().__struct8::l’, which is of non-class type ‘int’
  382 |                               std::declval<__struct8>().l.l_quantity))))>
      |                                                           ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:379:59: error: request for member ‘l_extendedprice’ in ‘std::declval<__struct8>().__struct8::l’, which is of non-class type ‘int’
  379 |                             ((std::declval<__struct8>().l.l_extendedprice *
      |                                                           ^~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:380:65: error: request for member ‘l_discount’ in ‘std::declval<__struct8>().__struct8::l’, which is of non-class type ‘int’
  380 |                               ((1 - std::declval<__struct8>().l.l_discount)))) -
      |                                                                 ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:381:60: error: request for member ‘ps_supplycost’ in ‘std::declval<__struct8>().__struct8::ps’, which is of non-class type ‘int’
  381 |                             ((std::declval<__struct8>().ps.ps_supplycost *
      |                                                            ^~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:382:59: error: request for member ‘l_quantity’ in ‘std::declval<__struct8>().__struct8::l’, which is of non-class type ‘int’
  382 |                               std::declval<__struct8>().l.l_quantity))))>
      |                                                           ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:382:73: error: template argument 1 is invalid
  382 |                               std::declval<__struct8>().l.l_quantity))))>
      |                                                                         ^
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:382:73: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:385:35: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  385 |                           __items.push_back((
      |                                   ^~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:386:37: error: request for member ‘l_extendedprice’ in ‘x.__struct8::l’, which is of non-class type ‘int’
  386 |                               ((x.l.l_extendedprice * ((1 - x.l.l_discount)))) -
      |                                     ^~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:386:65: error: request for member ‘l_discount’ in ‘x.__struct8::l’, which is of non-class type ‘int’
  386 |                               ((x.l.l_extendedprice * ((1 - x.l.l_discount)))) -
      |                                                                 ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:387:38: error: request for member ‘ps_supplycost’ in ‘x.__struct8::ps’, which is of non-class type ‘int’
  387 |                               ((x.ps.ps_supplycost * x.l.l_quantity))));
      |                                      ^~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:387:58: error: request for member ‘l_quantity’ in ‘x.__struct8::l’, which is of non-class type ‘int’
  387 |                               ((x.ps.ps_supplycost * x.l.l_quantity))));
      |                                                          ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:377:25:   required from here
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:376:50: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  376 |                         return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                ~~^~~~~
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:376:61: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  376 |                         return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                           ~~^~~
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:373:24: error: no matching function for call to ‘std::vector<std::pair<__struct11, __struct10> >::push_back(<brace-enclosed initializer list>)’
  373 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~^
  374 |           {__struct11{g.key.nation, (-g.key.o_year)},
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  375 |            __struct10{g.key.nation, std::to_string(g.key.o_year), ([&](auto v) {
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  376 |                         return std::accumulate(v.begin(), v.end(), 0.0);
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  377 |                       })(([&]() {
      |                       ~~~~~~~~~~~
  378 |                         std::vector<decltype((
      |                         ~~~~~~~~~~~~~~~~~~~~~~
  379 |                             ((std::declval<__struct8>().l.l_extendedprice *
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  380 |                               ((1 - std::declval<__struct8>().l.l_discount)))) -
      |                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  381 |                             ((std::declval<__struct8>().ps.ps_supplycost *
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  382 |                               std::declval<__struct8>().l.l_quantity))))>
      |                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  383 |                             __items;
      |                             ~~~~~~~~
  384 |                         for (auto x : g.items) {
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~
  385 |                           __items.push_back((
      |                           ~~~~~~~~~~~~~~~~~~~
  386 |                               ((x.l.l_extendedprice * ((1 - x.l.l_discount)))) -
      |                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  387 |                               ((x.ps.ps_supplycost * x.l.l_quantity))));
      |                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  388 |                         }
      |                         ~
  389 |                         return __items;
      |                         ~~~~~~~~~~~~~~~
  390 |                       })())}});
      |                       ~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = std::pair<__struct11, __struct10>; _Alloc = std::allocator<std::pair<__struct11, __struct10> >; value_type = std::pair<__struct11, __struct10>]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘const std::vector<std::pair<__struct11, __struct10> >::value_type&’ {aka ‘const std::pair<__struct11, __struct10>&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = std::pair<__struct11, __struct10>; _Alloc = std::allocator<std::pair<__struct11, __struct10> >; value_type = std::pair<__struct11, __struct10>]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘std::vector<std::pair<__struct11, __struct10> >::value_type&&’ {aka ‘std::pair<__struct11, __struct10>&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCHQueriesq92847671856/001/prog.cpp:400:5: error: conversion from ‘vector<__struct10>’ to non-scalar type ‘vector<__struct8>’ requested
  325 |   std::vector<__struct8> result = ([&]() {
      |                                   ~~~~~~~~
  326 |     std::vector<__struct9> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  327 |     for (auto l : lineitem) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~
  328 |       for (auto p : part) {
      |       ~~~~~~~~~~~~~~~~~~~~~
  329 |         if (!((p.p_partkey == l.l_partkey)))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  330 |           continue;
      |           ~~~~~~~~~
  331 |         for (auto s : supplier) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~
  332 |           if (!((s.s_suppkey == l.l_suppkey)))
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  333 |             continue;
      |             ~~~~~~~~~
  334 |           for (auto ps : partsupp) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~
  335 |             if (!(((ps.ps_partkey == l.l_partkey) &&
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  336 |                    (ps.ps_suppkey == l.l_suppkey))))
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  337 |               continue;
      |               ~~~~~~~~~
  338 |             for (auto o : orders) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~
  339 |               if (!((o.o_orderkey == l.l_orderkey)))
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  340 |                 continue;
      |                 ~~~~~~~~~
  341 |               for (auto n : nation) {
      |               ~~~~~~~~~~~~~~~~~~~~~~~
  342 |                 if (!((n.n_nationkey == s.s_nationkey)))
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  343 |                   continue;
      |                   ~~~~~~~~~
  344 |                 if (!((((std::string(p.p_name).substr(0, (prefix.size()) -
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  345 |                                                              (0)) == prefix) &&
      |                                                              ~~~~~~~~~~~~~~~~~~
  346 |                         (o.o_orderdate >= start_date)) &&
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  347 |                        (o.o_orderdate <= end_date))))
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  348 |                   continue;
      |                   ~~~~~~~~~
  349 |                 auto __key = Result{
      |                 ~~~~~~~~~~~~~~~~~~~~
  350 |                     n.n_name,
      |                     ~~~~~~~~~
  351 |                     std::stoi(std::string(o.o_orderdate).substr(0, (4) - (0)))};
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  352 |                 bool __found = false;
      |                 ~~~~~~~~~~~~~~~~~~~~~
  353 |                 for (auto &__g : __groups) {
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  354 |                   if (__g.key == __key) {
      |                   ~~~~~~~~~~~~~~~~~~~~~~~
  355 |                     __g.items.push_back(__struct8{l, p, s, ps, o, n});
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  356 |                     __found = true;
      |                     ~~~~~~~~~~~~~~~
  357 |                     break;
      |                     ~~~~~~
  358 |                   }
      |                   ~
  359 |                 }
      |                 ~
  360 |                 if (!__found) {
      |                 ~~~~~~~~~~~~~~~
  361 |                   __groups.push_back(__struct9{
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  362 |                       __key,
      |                       ~~~~~~
  363 |                       std::vector<__struct8>{__struct8{l, p, s, ps, o, n}}});
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  364 |                 }
      |                 ~
  365 |               }
      |               ~
  366 |             }
      |             ~
  367 |           }
      |           ~
  368 |         }
      |         ~
  369 |       }
      |       ~
  370 |     }
      |     ~
  371 |     std::vector<std::pair<__struct11, __struct10>> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  372 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  373 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~~
  374 |           {__struct11{g.key.nation, (-g.key.o_year)},
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  375 |            __struct10{g.key.nation, std::to_string(g.key.o_year), ([&](auto v) {
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  376 |                         return std::accumulate(v.begin(), v.end(), 0.0);
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  377 |                       })(([&]() {
      |                       ~~~~~~~~~~~
  378 |                         std::vector<decltype((
      |                         ~~~~~~~~~~~~~~~~~~~~~~
  379 |                             ((std::declval<__struct8>().l.l_extendedprice *
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  380 |                               ((1 - std::declval<__struct8>().l.l_discount)))) -
      |                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  381 |                             ((std::declval<__struct8>().ps.ps_supplycost *
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  382 |                               std::declval<__struct8>().l.l_quantity))))>
      |                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  383 |                             __items;
      |                             ~~~~~~~~
  384 |                         for (auto x : g.items) {
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~
  385 |                           __items.push_back((
      |                           ~~~~~~~~~~~~~~~~~~~
  386 |                               ((x.l.l_extendedprice * ((1 - x.l.l_discount)))) -
      |                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  387 |                               ((x.ps.ps_supplycost * x.l.l_quantity))));
      |                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  388 |                         }
      |                         ~
  389 |                         return __items;
      |                         ~~~~~~~~~~~~~~~
  390 |                       })())}});
      |                       ~~~~~~~~~
  391 |     }
      |     ~
  392 |     std::sort(__items.begin(), __items.end(), [](auto &a, auto &b) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  393 |       return std::tie(a.first.f0, a.first.f1) <
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  394 |              std::tie(b.first.f0, b.first.f1);
      |              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  395 |     });
      |     ~~~
  396 |     std::vector<__struct10> __res;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  397 |     for (auto &p : __items)
      |     ~~~~~~~~~~~~~~~~~~~~~~~
  398 |       __res.push_back(p.second);
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~
  399 |     return __res;
      |     ~~~~~~~~~~~~~
  400 |   })();
      |   ~~^~
